--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "mongoose": "^5.10.0",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
