--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.0",
